# spacemacs-private

./: .customize.el  .gitignore  .gitmodules  .spacemacs  Additional-proposed-infix-arguments-and-suffix-commands.md  Automatic-escaping.md  Autumnal-Cleanup-2016.org  Basics.md  Bugs.org  Commands.org  Conditional-Hydra.org  Debugging.org  Default-configuration.md  Developing.org  Example-configuration.md  FAQ.md  FAQ.org  Find-Files.org  Findutils.org  Go-to-persons.org  Helm-2.md  History-Manipulation.md  Home.md  Home.org  Hooks-and-advice-used-by-smartparens.md  How-to-"Rewrite"-in-Magit-2.x.md  How-to-use-structural-functions-in-my-own-code.md  Hybrid-S-expressions.md  Idris.md  Important-announcements.md  Info-Files.org  Installation.md  Minibuffer.org  Nesting-Hydras.md  Org-mode-links.md  PDF-Tools.md  Pair-management.md  Plugin-Dispatch-Key-Registry.md  Popwin.org  Projectile-&-Fixmee.md  (+22 more)
docs/: dash-examples.el  digraph-cheat-sheet.html  digraph-cheat-sheet.maff  digraph-vimdoc.txt  evil-digraphs-table.txt  loading.org  magit-user-manual.html  smartparens-README.html  tsv-mode.html  use-package-README.html  with-editor-user-manual.html
docs/flycheck-latest/: index.html  objects.inv
docs/helm.wiki/: .dir-locals.el  Buffers.org  Eshell.org  Etags.org  Firefox-Bookmarks.org  Fuzzy-matching.md  Grep.org  Locate.org  Migemo.org  Projects.org
docs/hydra-wiki/: Binding-Styles.md  Breadcrumb.md  Compilation.md  Emacs.md  Flycheck.md  Git-gutter.md  Helm.md  Hydra-Colors.md  Hydras-by-Topic.md  Ibuffer.org  Info.md  Macro.md  Markdown-mode.md  Org-clock-and-timers.org  Org-mode-block-templates.md  Orgmode.org  Rectangle-Operations.md  Smartparens.md  Switch-to-buffer.md  Unicode-input.md  Window-Management.md  defhydradio-demo.el  hydra-ivy-replacement.md  internals.org  multiple-cursors.md  origami-code-folding.org
docs/magit-wiki/: Cheatsheet.org  Emacsclient.md  _Sidebar.md  magit-update-uncommitted-buffer-hook.md
docs/smartparens-wiki/: Configuration-interface.md  Home.md  Paredit-and-smartparens.md  Permissions.md  User-interface.md  Working-with-expressions.md  Wrapping.md
docs/spacemacs-wiki/: Autumnal-Cleanup-2015.org  Beginner's-Guide-to-Contributing-a-Pull-Request-to-Spacemacs.md  Hybrid-Editing-Style-Changes.org  Keymaps-guide.org  Loading-process-guide.org  Project-management.md  _Footer.md
layers/drag-n-drop/: README.org  funcs.el  keybindings.el  packages.el
layers/perl5/: README.org  packages.el
local/: autolookup.el  binchen-enhance-emacs-evil-global-markers.el  copy-visible.el  dactyl-mode.el  ibuffer-hydra.el  mode-compile.el  mozrepl-helpers.el  processing-mode.el  roman-to-arabic.el  tridactyl-mode.el  troyp-macros.el  troyp-test.el  workarounds.el
local/evil-adjust/: evil-adjust.el
local/lawlist/: glyph_debug_snippet
local/sdic-2.1.3/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README-utf.txt  THANKS  TODO  aclocal.m4  config.cache  config.status  configure  configure.in  edict  gene.txt  gene95.lzh  install.el  install.el.in
local/sdic-2.1.3/contrib/: edict.perl  eijirou.perl  gene.perl  jgene.perl
local/sdic-2.1.3/lisp/: Makefile  Makefile.am  Makefile.in  elisp-comp  sample.emacs  sample.emacs.in  sample.utf8.emacs  sdic.el.in
local/sdic-2.1.3/texi/: sdic-orig.info  sdic.info
local/t/: t.el
snippets/archive-mode/: palemoon-overlay  palemoon-target-app
snippets/dactyl-mode/: command!  content-document  count-here-adjacent  count-here-tab  function=  group  important  js-block  map  map-command-call  margin-bottom  margin-top  openorselect  padding-top  prefix-completion-mapping  search  setTimeoutMultiline  timeout
snippets/dactyl-text-mode/: Array.from  bang-adjacent-here  bang-here-adjacent  boolean-preference-commands  content-document  count-adjacent-here  count-tab-here  function  group  openorselect  padding-bottom  search  search-command-and-binding  window.X=X
snippets/emacs-lisp-mode/: ert  ert-test  eval-after-load  keyboard-macro  lexical-binding  package
snippets/java-mode/: getter  gettersetter  setter
snippets/js2-mode/: FIXME  NOTE  TODO  afn:  comment-delimited  createElement  doc-comment  document  fn:  getElementById  getElementsByClassName  getElementsByClassName_arr  getElementsByTagName  getElementsByTagName_arr  jshint_esversion6  querySelector  querySelectorAll  querySelectorAll_arr  wrappedJSObject
snippets/markdown-mode/: parenthesized-link
snippets/nxml-mode/: palemoon-target-app
snippets/perl-mode/: shebang
snippets/prog-mode/: fixme  note  todo
snippets/sh-mode/: dolines  escape-single-quote  fn  getopt  getopt2  help-option  help-option-concise  option-case  option-case-long  options-loop  query-continue-on-failure  y-or-n
snippets/snippet-mode/: noindent
snippets/tridactyl-mode/: searchkey  sk_bindurl
troyp/: README.org  config.el  extensions.el  funcs.el  packages.el
troyp/local/: ert-test-template.el
troyp/local/asciiheadings/: asciihd-figlet.el  asciihd-work.el  asciiheadings.el
troyp/local/evil-visual-replace/: README.md  evil-visual-replace.el
troyp/local/fn-arith/: README.md  fn-arith.el
troyp/local/mode-ring/: mode-ring.el
troyp/local/region-swap/: region-swap.el
troyp/local/se-extract/: se.el
troyp/local/swap-regions/: swap-regions.el
troyp/local/t/: alist.el  t-notes.hs  t.el
troyp/local/troyp-macros/: troyp-macros.el
troyp/local/tspc++/: tspc++.el
troyp/local/tspcollections/: notes.el  t.el
troyp/local/tspevil/: tspevil.el
troyp/local/tspjava/: tspjava.el
troyp/local/tspjs/: tspjs.el
troyp/local/tsplib/: fn-README.md  tsplib-data.el  tsplib-def.el  tsplib-evil.el  tsplib-functional.el  tsplib-pure.el  tsplib.el
troyp/local/tspplmodes/: tspplmodes.el
troyp/local/tspsnippets/: tspsnippets.el
troyp/local/tsputils/: tsputils.el
troyp/local/working/: a.el  asciihd-evil.el  double-slash.el  mls.el  with-macros.el
